# data_science_stuff_I_wish_I_knew_sooner

./: README.md
1-initial-feat-elimination/: 1-Initial-Feat-Elimination.ipynb  README.md  pyproject.toml
1-initial-feat-elimination/feature_analysis/: __init__.py  plotting.py
2-classification-metrics/: 2-Classification-Metrics.ipynb  README.md  pyproject.toml
2-classification-metrics/metrics_analysis/: __init__.py  plotting.py
3-boosting-regression-limits/: 3-Boosting-Regression-Limits.ipynb  README.md  pyproject.toml
