[project]
name = "initial-feat-elimination"
version = "0.1.0"
description = "Initial Feature Elimination - Data Science Article"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "pandas>=2.2.0",
    "seaborn",
    "matplotlib",
    "feature-engine>=1.9.4",
    "phik>=0.12.5",
    "scikit-learn>=1.4.0",
    "scipy",
    "statsmodels",
    "jupyter",
    "ipykernel",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["feature_analysis"]
