[project]
name = "classification-metrics"
version = "0.1.0"
description = "Classification Metrics - Data Science Article"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "pandas>=2.2.0",
    "seaborn",
    "matplotlib",
    "scikit-learn>=1.4.0",
    "scipy",
    "jupyter",
    "ipykernel",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["metrics_analysis"]
